--- a/src/i18n/eng00.json
+++ b/src/i18n/eng00.json
@@ -21,7 +21,7 @@
     "dbs": {
         "title": "The Grand Story of Wisdom",
         "para": {
-            "1": "This story starts with the time before there were any people. It then tells the story of how the first two people interacted with God.\",",
+            "1": "This story starts with the time before there were any people. It then tells the story of how the first two people interacted with God.",
             "2": "Gather your friends and read how God prepared people for the arrival of Jesus and his Wisdom.",
             "3": "Select your favourite language by clicking on the world globe above."
         }
