--- a/src/i18n/spn00.json
+++ b/src/i18n/spn00.json
@@ -21,7 +21,7 @@
     "dbs": {
         "title": "La gran historia de la sabiduría",
         "para": {
-            "1": "Esta historia comienza con la época anterior a que existieran personas. Luego cuenta la historia de cómo las dos primeras personas interactuaron con Dios.\",",
+            "1": "Esta historia comienza con la época anterior a que existieran personas. Luego cuenta la historia de cómo las dos primeras personas interactuaron con Dios.",
             "2": "Reúne a tus amigos y lee cómo Dios preparó a las personas para la llegada de Jesús y su Sabiduría.",
             "3": "Seleccione su idioma favorito haciendo clic en el globo terráqueo de arriba."
         }
