--- a/history.txt
+++ b/history.txt
@@ -2,6 +2,10 @@ yarn global add @quasar/cli
 removed package-lock.json as per yarn
 quasar mode add pwa
 
+ALWAYS USE YARN -- NOT NPM
+
+Now using node v18.18.0
+
 yarn add --dev dotenv
 https://quasar.dev/quasar-cli-vite/handling-process-env
 
@@ -10,16 +14,12 @@ from https://quasar.dev/options/app-internationalization/
       yarn add --dev @intlify/vue-i18n-loader
 
 
-quasar new component something
-quasar dev
-
-
-quasar dev -m pwa  -- turn on xampp to right
-quasar build -m pwa
-
 for PWA https://quasar.dev/quasar-cli-webpack/developing-pwa/app-icons
 
 For Tables: https://youtu.be/u4d6PeQje1Q
 
 icongenie generate -m pwa -i c:/ampp/htdocs/mylanguage-hindu/public/icons/android-chrome-512x512.png
 
+
+yarn quasar dev -m pwa  -- turn on xampp to right
+yarn quasar build -m pwa
